# til24-asr

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  dev.py  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/hooks/: postCreate.sh  setupGCS.sh
eval/: asr_eval.py  test_asr.py
notebooks/: Whisper_w_PEFT.ipynb  nemo.ipynb
til24_asr/: ASRManager.py  app.py  hacks.py  log.py  structs.py
train/: __main__.py  callbacks.py  config.py  data.py  model.py
