[tool.poetry]
name = "til24-asr"
version = "0.1.0"
description = "template for python api server"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
rich = "^13.7.1"
fastapi = { extras = ["all"], version = "^0.111.0" }
python-dotenv = "^1.0.1"
librosa = "^0.10.2.post1"
faster-whisper = "^1.0.2"
num2words = "^0.5.13"

[tool.poetry.group.dev.dependencies]
ruff = "*"
poethepoet = "*"
jiwer = "^3.0.4"
pandas = "^2.2.2"
requests = "^2.31.0"
tqdm = "^4.66.4"
nvidia-cudnn-cu12 = "8.*"
nvidia-cuda-nvrtc-cu12 = "12.1.*"
nvidia-cublas-cu12 = "12.1.*"

[tool.poe.tasks]
dev = "python dev.py"
prod = "docker run --rm --gpus all -p 5001:5001 nyanplan3-asr"
test = "python eval/test_asr.py"
publish = "docker push asia-southeast1-docker.pkg.dev/dsta-angelhack/repository-nyanplan3/nyanplan3-asr:latest"

[tool.poe.tasks.build]
cmd = """docker build -f Dockerfile . \
  -t nyanplan3-asr:latest \
  -t asia-southeast1-docker.pkg.dev/dsta-angelhack/repository-nyanplan3/nyanplan3-asr:latest \
  -t nyanplan3-asr:${tag} \
  -t asia-southeast1-docker.pkg.dev/dsta-angelhack/repository-nyanplan3/nyanplan3-asr:${tag} \
"""
args = [{ name = "tag", positional = true, required = true }]

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
