[tool.poetry]
name = "til24-asr"
version = "0.1.0"
description = "template for python api server"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
python-dotenv = "^1.0.1"
fastapi-slim = "^0.111.0"
uvicorn = "^0.29.0"
uvloop = "^0.19.0"
httptools = "^0.6.1"
librosa = "^0.10.2.post1"
faster-whisper = "^1.0.2"
num2words = "^0.5.13"

[tool.poetry.group.dev.dependencies]
ruff = "*"
poethepoet = "*"
rich = "^13.7.1"
jiwer = "^3.0.4"
pandas = "^2.2.2"
requests = "^2.31.0"
tqdm = "^4.66.4"
nvidia-cudnn-cu12 = "8.*"
nvidia-cuda-nvrtc-cu12 = "12.1.*"
nvidia-cublas-cu12 = "12.1.*"

[tool.poe.tasks]
dev = { cmd = "python dev.py", use_exec = true }
prod = { cmd = "docker run --rm --gpus all -p 5001:5001 nyanplan3-asr", use_exec = true }
test = "python eval/test_asr.py"
publish = "docker push asia-southeast1-docker.pkg.dev/dsta-angelhack/repository-nyanplan3/nyanplan3-asr:latest"
requirements = "poetry export -o requirements.txt --without-hashes"

[tool.poe.tasks.build]
cmd = """docker build -f Dockerfile . \
  -t nyanplan3-asr:latest \
  -t asia-southeast1-docker.pkg.dev/dsta-angelhack/repository-nyanplan3/nyanplan3-asr:latest \
  -t nyanplan3-asr:${tag} \
  -t asia-southeast1-docker.pkg.dev/dsta-angelhack/repository-nyanplan3/nyanplan3-asr:${tag} \
"""
deps = ["requirements"]
args = [{ name = "tag", positional = true, required = true }]

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
